--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "antlr4": "^4.7.1",
     "babel-preset-env": "^1.7.0",
-    "blockly": "^1.0.0",
+    "closure-webpack-plugin": "^1.0.1",
+    "exports-loader": "^0.7.0",
     "html-webpack-plugin": "^3.2.0",
+    "script-loader": "^0.7.2",
     "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
